TestCases/PodSecurityPolicy/blockPrivilegedContainer/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: privileged-containers
tests:
  - name: privileged-containers-disallowed
    template: ../../../PodSecurityPolicy/blockPrivilegedContainer/constraintTemplate.yaml
    constraint: ../../../PodSecurityPolicy/blockPrivilegedContainer/constraint.yaml
    cases:
    - name: example-disallowed
      object: example/example_disallowed.yaml
      assertions:
      - violations: yes
    - name: example-allowed
      object: example/example_allowed.yaml
      assertions:
      - violations: no
    - name: disallowed-ephemeral
      object: example/disallowed_ephemeral.yaml
      assertions:
      - violations: yes
    - name: update
      object: example/update.yaml
      assertions:
      - violations: no
